--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/avif" href="../assets/Images/image7.avif">
+    <link rel="icon" type="image/avif" href="./src/assets/Images/image7.avif">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sneakers</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
